tests/valid/borrow/deref_shared.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    let r: unrestricted &unrestricted isize = (&x) in
    (*r)
}
