tests/invalid/lifetime/elision_local_annotation.facet
fn bad(x: unrestricted isize) -> unrestricted isize {
    let r: unrestricted &unrestricted isize = (&x) in
    (*r)
}
